# flutter_defender

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  l10n.yaml  pubspec.yaml
.github/workflows/: ci.yml  publish.yml  release-tag.yml  unit_tests.yml
android/: .gitignore  CMakeLists.txt  build.gradle  consumer-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/aleem/flutter/defender/: AdvancedSecurityDetector.kt  DefenderMessages.g.kt  EmulatorDetector.kt  FlutterDefenderPlugin.kt  ForegroundLifecycleTracker.kt  LifecycleSnapshotStore.kt  OverlayHardening.kt  ReleaseEmulatorGuardActivity.kt  SecureStorageHelper.kt
android/src/test/kotlin/aleem/flutter/defender/: FlutterDefenderPluginTest.kt  ForegroundLifecycleTrackerTest.kt  OverlayTouchStateTrackerTest.kt
codex/: plugin_best_practices.md
example/: .gitignore  README.md  pubspec.yaml
example/android/: .gitignore
example/integration_test/: plugin_integration_test.dart
example/ios/: .gitignore
example/lib/: main.dart
example/test/: widget_test.dart
ios/: .gitignore  flutter_defender.podspec
lib/: flutter_defender.dart  flutter_defender_localization_support.dart  flutter_defender_method_channel.dart  flutter_defender_platform_interface.dart
pigeons/: defender_messages.dart
test/: flutter_defender_behavior_test.dart  flutter_defender_guard_test.dart  flutter_defender_method_channel_test.dart  flutter_defender_request_signer_test.dart  flutter_defender_test.dart
tool/: check_android_root_path_parity.py  check_version_bump.py
(+64 files in other folders)
